--- a/resume.css
+++ b/resume.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab');
 body {
     margin: 0;
     padding: 0;
@@ -134,11 +135,55 @@ input[type="range"]::-webkit-slider-thumb {
 /* about section ends */
 
 
-.lastContainer {
-    width: 100vw;
-    background-color: #d5bdaf;
+.hobbiesContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 15% 0px;
+    font-family: Roboto Slab;
 }
 
+.hobbiesContainer .all-hobbies{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    height: 100%;
+    /* background-color: #a75e34; */
+    align-items: center;
+}
+
+.all-hobbies .hobbie1,.hobbie2,.hobbie3{
+    border-radius: 10px;
+    padding: 1%;
+    width: 65%;
+    height: 15em;
+    color: white;
+    margin: 2%;
+}
+
+.all-hobbies .hobbie1{
+    background-image: url('https://images.unsplash.com/photo-1577998555981-6e798325914e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8a2FyYXRlfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60');
+    background-size: 50%;
+    background-repeat: no-repeat;
+    background-color: #b9977f;
+}
+.all-hobbies .hobbie2{
+    background-image: url('https://images.unsplash.com/photo-1528819622765-d6bcf132f793?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8Y2hlc3N8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60');
+    background-size: 50%;
+    text-align: right;
+    background-position: 100%;
+    background-repeat: no-repeat;
+    background-color: #b9977f;
+}
+.all-hobbies .hobbie3{
+    background-image: url('https://images.unsplash.com/photo-1586173806725-797f4d632f5d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8cnViaWtzJTIwY3ViZXxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60');
+    background-color: #b9977f;
+    background-size: 50%;
+    background-repeat: no-repeat;
+}
 /* main section ends */
 
 footer {
@@ -214,7 +259,7 @@ input[type="submit"]:hover {
 }
 
 .footer-left{
-    border-right: 1px solid #ebc7b3;
+    border-right: 1px solid #f0d0bf;
 }
 
 .footer-content h1 {
@@ -265,7 +310,7 @@ p.copyright {
     }
 
     .footer-left{
-        border-bottom: 1px solid #ebc7b3;
+        border-bottom: 1px solid #f0d0bf;
         border-right: none;
     }
 
