--- a/resume.css
+++ b/resume.css
@@ -66,8 +66,38 @@ main {
     align-items: center;
 }
 
+.main-container{
+    font-family: 'Times New Roman', Times, serif;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 200px 0px;
+    box-sizing: border-box;
+}
+
+.main-content{
+    width: 60%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.main-content .main-left, .main-right{
+    width: 50%;
+    align-items: center;
+    text-align: center;
+}
+
+.main-content .main-left img{
+    width: 100%;
+    height: 100%;
+}
+
 /* about secion */
-.aboutContainer {
+.about-container {
     font-family: 'Times New Roman', Times, serif;
     display: flex;
     flex-flow: row wrap;
@@ -127,7 +157,7 @@ input[type="range"]::-webkit-slider-thumb {
 }
 
 .about-left .my-para {
-    font-family: pascal;
+    font-family: roboto slab;
     color: #a07b61;
 }
 
@@ -135,55 +165,104 @@ input[type="range"]::-webkit-slider-thumb {
 /* about section ends */
 
 
-.hobbiesContainer {
+.hobbies-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 15% 0px;
+    margin: 15% 0px 10%;
+    color: #7a4123;
+    font-family: 'Times New Roman', Times, serif;
+}
+.hobbies-container h1{  
+    font-size: 2em;
+}
+
+.hobbies-container .all-hobbies{
     font-family: Roboto Slab;
-}
-
-.hobbiesContainer .all-hobbies{
+    position: relative;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 80%;
-    height: 100%;
-    /* background-color: #a75e34; */
-    align-items: center;
 }
 
-.all-hobbies .hobbie1,.hobbie2,.hobbie3{
+.all-hobbies .hobbie{
     border-radius: 10px;
-    padding: 1%;
-    width: 65%;
+    width: 350px;
+    height: 300px;
+    position: relative;
+    background-color: #b9977f;
+    box-shadow: 0px 20px 40px #96633f;
+    display: flex;
+    justify-content: center;
     height: 15em;
     color: white;
-    margin: 2%;
+    margin: 8% 2% 4%;
+    transition: 0.5s;
 }
 
-.all-hobbies .hobbie1{
-    background-image: url('https://images.unsplash.com/photo-1577998555981-6e798325914e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8a2FyYXRlfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60');
-    background-size: 50%;
-    background-repeat: no-repeat;
-    background-color: #b9977f;
+.all-hobbies .hobbie:hover{
+    height: 20em;
+    cursor: pointer;
+    
 }
-.all-hobbies .hobbie2{
-    background-image: url('https://images.unsplash.com/photo-1528819622765-d6bcf132f793?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8Y2hlc3N8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60');
-    background-size: 50%;
-    text-align: right;
-    background-position: 100%;
-    background-repeat: no-repeat;
-    background-color: #b9977f;
+
+.all-hobbies .hobbie .image{
+    position: absolute;
+    border-radius: 10px;
+    width: 70%;
+    height: 70%;
+    top: 5%;
+    background-color: #a75e34;
+    transition: 0.75s;
+    overflow: hidden;
 }
-.all-hobbies .hobbie3{
-    background-image: url('https://images.unsplash.com/photo-1586173806725-797f4d632f5d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8cnViaWtzJTIwY3ViZXxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60');
-    background-color: #b9977f;
-    background-size: 50%;
-    background-repeat: no-repeat;
+
+.all-hobbies .hobbie:hover .image{
+    top: -20%;
+    scale: 0.75;
+    box-shadow: 0px 5px 40px #3d2e23;
 }
+
+.all-hobbies .hobbie .image img{
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.all-hobbies .hobbie .hobbie-content{
+    position: relative;
+    width: 100%;
+    text-align: center;
+    padding: 3%;
+    top: 70%;
+    overflow: hidden;
+    transition: 0.5s;
+}
+.all-hobbies .hobbie .hobbie-content p{
+    display: none;
+    padding: 3%;
+    transition: 0.5s;
+}
+.all-hobbies .hobbie:hover .hobbie-content > p{
+    display: block;
+}
+
+.all-hobbies .hobbie:hover .hobbie-content{
+    top: 40%;
+}
+
+@media (max-width:600px){
+    .all-hobbies{
+        display: block;
+        flex-wrap: wrap;
+    }
+}
+    
+
 /* main section ends */
 
 footer {
@@ -202,7 +281,7 @@ footer {
     display: flex;
     justify-content: space-around;
     align-items: flex-start;
-    width: 70%;
+    /* width: 100%; */
 }
 
 form label {
@@ -222,7 +301,7 @@ form textarea {
 form input, form textarea {
     margin: 15px 0;
     padding: 10px 10px;
-    width: 75%;
+    width: 80%;
     outline: none;
     border: 1px solid #bbb;
     border-radius: 20px;
@@ -253,9 +332,10 @@ input[type="submit"]:hover {
 
 .footer-right,
 .footer-left {
-    width: 100%;
+    width: 400px;
     height: 100%;
-    padding: 3%;
+    padding: 10px;
+    align-items: center;
 }
 
 .footer-left{
@@ -299,7 +379,7 @@ p.copyright {
     cursor: text;
 }
 
-@media (max-width:700px) {
+@media (max-width:600px) {
     .about-content {
         display: block;
         padding: 3%;
@@ -312,11 +392,17 @@ p.copyright {
     .footer-left{
         border-bottom: 1px solid #f0d0bf;
         border-right: none;
+        padding-left: 60px;
+        box-sizing: border-box;
     }
 
     .about-left {
         display: inline;
         width: 100%;
+    }
+
+    .all-hobbies .hobbie{
+        align-self: center;
     }
 }
 
